--- a/index.Rmd
+++ b/index.Rmd
@@ -1,29 +1,21 @@
 ---
-title: 'My Final College Paper'
-author: 'Your R. Name'
-date: 'May 20xx'
-institution: 'Reed College'
-division: 'Mathematics and Natural Sciences'
-advisor: 'Advisor F. Name'
-# If you have more two advisors, un-silence line 7
-#altadvisor: 'Your Other Advisor'
-department: 'Mathematics'
-degree: 'Bachelor of Arts'
+title: 'Understanding the molecular mechanisms of germline-dependent epigenetic inheritance: Computational analysis of multi-omics data'
+author: 'Deepak K. Tanwar'
+date: 'August 2021'
+institution: 'ETH Zürich'
+advisor: 'Isabelle M. Mansuy'
+altadvisor: 'Pierre-Luc Germain'
+department: 'Health Sciences and Technology'
+degree: 'Masters of Science'
 knit: bookdown::render_book
 site: bookdown::bookdown_site
-
-# This will automatically install the {remotes} package and {thesisdown}
-# Change this to FALSE if you'd like to install them manually on your own.
 params:
   'Install needed packages for {thesisdown}': True
-  
-# Remove the hashtag to specify which version of output you would like.
-# Can only choose one at a time.
 output:
-  thesisdown::thesis_pdf: default 
-#  thesisdown::thesis_gitbook: default         
-#  thesisdown::thesis_word: default
-#  thesisdown::thesis_epub: default
+  # thesisdown::thesis_pdf: default 
+  thesisdown::thesis_gitbook: default
+  # thesisdown::thesis_word: default
+  # thesisdown::thesis_epub: default
 
 # If you are creating a PDF you'll need to write your preliminary content 
 # (e.g., abstract, acknowledgements) below or use code similar to line 25-26 
@@ -43,6 +35,9 @@ preface: |
   
 # Specify the location of the bibliography below
 bibliography: bib/thesis.bib
+biblio-style: apalike
+link-citations: yes
+
 # Download your specific csl file and refer to it in the line below.
 csl: csl/apa.csl
 lot: true
