--- a/thesis/index.Rmd
+++ b/thesis/index.Rmd
@@ -6,14 +6,14 @@ institution: 'ETH Zürich'
 advisor: 'Isabelle M. Mansuy'
 altadvisor: 'Pierre-Luc Germain'
 department: 'Health Sciences and Technology'
-degree: 'Masters of Science'
+degree: 'Doctor of Sciences'
 knit: bookdown::render_book
 site: bookdown::bookdown_site
 params:
   'Install needed packages for {thesisdown}': True
 output:
-  # thesisdown::thesis_pdf: default 
-  thesisdown::thesis_gitbook: default
+  thesisdown::thesis_pdf: default
+  # thesisdown::thesis_gitbook: default
   # thesisdown::thesis_word: default
   # thesisdown::thesis_epub: default
 
@@ -21,7 +21,7 @@ output:
 # (e.g., abstract, acknowledgements) below or use code similar to line 25-26 
 # for the .RMD files. If you are NOT producing a PDF, delete or silence
 # lines 25-39 in this YAML header.
-abstract: '`r if(knitr:::is_latex_output()) paste(readLines(here::here("prelims", "00-abstract.Rmd")), collapse = "\n  ")`'
+abstract: '`r if(knitr:::is_latex_output()) paste(readLines("prelims/00-abstract.Rmd"), collapse = "\n  ")`'
 # If you'd rather include the preliminary content in files instead of inline
 # like below, use a command like that for the abstract above.  Note that a tab 
 # is needed on the line after the `|`.
@@ -98,11 +98,11 @@ Alternatively, you can put that content in files like 00--prelim.Rmd and
 
 
 
-```{r eval=!knitr::is_latex_output(), child=here::here("prelims", "00--prelim.Rmd")}
+```{r eval=!knitr::is_latex_output(), child=here::here("/thesis/prelims", "00--prelim.Rmd")}
 
 ```
 
-```{r eval=!knitr::is_latex_output(), child=here::here("prelims", "00-abstract.Rmd")}
+```{r eval=!knitr::is_latex_output(), child=here::here("thesis/prelims", "00-abstract.Rmd")}
 
 ```
 
@@ -110,30 +110,9 @@ Alternatively, you can put that content in files like 00--prelim.Rmd and
 "Chapter 0." You can also use {-} for no numbers on chapters.
 -->
 
-# Introduction {.unnumbered}
-
-Welcome to the _R Markdown_ thesis template. This template is based on (and in many places copied directly from) the Reed College LaTeX template, but hopefully it will provide a nicer interface for those that have never used TeX or LaTeX before.  Using _R Markdown_ will also allow you to easily keep track of your analyses in **R** chunks of code, with the resulting plots and output included as well.  The hope is this _R Markdown_ template gets you in the habit of doing reproducible research, which benefits you long-term as a researcher, but also will greatly help anyone that is trying to reproduce or build onto your results down the road.
-
-Hopefully, you won't have much of a learning period to go through and you will reap the benefits of a nicely formatted thesis.  The use of LaTeX in combination with _Markdown_ is more consistent than the output of a word processor, much less prone to corruption or crashing, and the resulting file is smaller than a Word file. While you may have never had problems using Word in the past, your thesis is likely going to be about twice as large and complex as anything you've written before, taxing Word's capabilities.  After working with _Markdown_ and **R** together for a few weeks, we are confident this will be your reporting style of choice going forward.
+<!-- # Introduction {.unnumbered} -->
 
 <!-- 
 If you're still on the fence about using _R Markdown_, check out the resource
 for newbies available at <https://rbasics.netlify.com>. 
 -->
-
-**Why use it?**
-
-_R Markdown_ creates a simple and straightforward way to interface with the beauty of LaTeX.  Packages have been written in **R** to work directly with LaTeX to produce nicely formatting tables and paragraphs. In addition to creating a user friendly interface to LaTeX, _R Markdown_ also allows you to read in your data, to analyze it and to visualize it using **R** functions, and also to provide the documentation and commentary on the results of your project.  Further, it allows for **R** results to be passed inline to the commentary of your results.  You'll see more on this later.  
-
-<!-- 
-Having your code and commentary all together in one place has a plethora of 
-benefits!
--->
-
-**Who should use it?**
-
-Anyone who needs to use data analysis, math, tables, a lot of figures, complex cross-references, or who just cares about the final appearance of their document should use _R Markdown_. Of particular use should be anyone in the sciences, but the user-friendly nature of _Markdown_ and its ability to keep track of and easily include figures, automatically generate a table of contents, index, references, table of figures, etc. should make it of great benefit to nearly anyone writing a thesis project.
-
-**For additional help with bookdown** 
-
-Please visit [the free online bookdown reference guide](https://bookdown.org/yihui/bookdown/).
