--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Understanding the molecular mechanisms of germline-dependent epigenetic inheritance: Computational analysis of multi-omics data'
+title: 'Computational analysis of multi-omics data to understand the molecular mechanisms of germline-dependent epigenetic inheritance'
 author: 'Deepak Kumar Tanwar'
 # date: 'December 2021'
 institution: 'ETH Zurich'
@@ -21,6 +21,14 @@ header-includes:
     - \usepackage{setspace}\onehalfspacing
     - \usepackage{acronym}
     - \usepackage{glossaries}
+    - \usepackage{biblatex}
+    - \usepackage{fancyhdr}
+    - \usepackage{graphics}
+    - \usepackage{float}
+    - \usepackage{placeins}
+    - \usepackage{lmodern}
+
+    # - \usepackage{indentfirst}
 
 
 # This will automatically install the {remotes} package and {thesisdown}
@@ -31,9 +39,9 @@ params:
 # Remove the hashtag to specify which version of output you would like.
 # Can only choose one at a time.
 output:
-  # thesisdown::thesis_pdf:
-  #   toc_depth: 3
- thesisdown::thesis_gitbook: default
+  thesisdown::thesis_pdf:
+    toc_depth: 3
+ # thesisdown::thesis_gitbook: default
  # thesisdown::thesis_word: default
  # thesisdown::thesis_epub: default
 
@@ -41,7 +49,7 @@ acknowledgements: |
   I want to thank a few people.
   
 # Specify the location of the bibliography below
-bibliography: bib/thesis.bib
+bibliography: [bib/anaraEV.bib]
 # Download your specific csl file and refer to it in the line below.
 csl: csl/apa.csl
 lot: true
